src/test/deca/context/invalid/created/decl_class/double_field.deca
// Description :
//    super classe non déclarée
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(2.5) L’identificateur a est déjà défini

class A{
int a;
boolean a;
}
